--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     <script src="/scripts/entryComponent.js"></script>
     <script src="/scripts/entriesDOM.js"></script>
     <script src="/scripts/journal.js"></script>
+    <script src="/scripts/buttons.js"></script>
     
 </body>
 </html>
