added edit option

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="form-container">
             <h2>Input</h2>
             <form class="form">
+                <input type="text" id="input-id" hidden></input>
                 <fieldset id="form-fieldset">
                     <label>Date</label>
                     <input type="date" class="form-field date" required></input>
